tests/unresolved-type-multiple-parameters.stderr
error: could not determine the type of this expression
  ┌─ test:7:5
  │
7 │ _ : f T
  │     ^
  │     │
  │     try annotating the type with `::`
  │     this has type `T _ -> ()`
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: could not determine the type of this expression
   ┌─ test:15:5
   │
15 │ _ : same-types U
   │     ^^^^^^^^^^
   │     │
   │     try annotating the type with `::`
   │     this has type `U a a -> ()` for some unknown type `a`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

error: could not determine the type of this expression
   ┌─ test:16:5
   │
16 │ _ : different-types U
   │     ^^^^^^^^^^^^^^^
   │     │
   │     try annotating the type with `::`
   │     this has type `U _ _ -> ()`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/unknown-type

